# get-some-ncbi-genomes

./: README.md  pyproject.toml
examples/: fromfile.txt
src/: get_some_ncbi_genomes.py
tests/: test_get_some_ncbi_genomes.py
